--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -5,85 +5,85 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green_500"
-    tools:context=".LoginActivity">
+    tools:context=".RegistrationFragment">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/parent_guide_line_start"
+        android:id="@+id/register_parent_guide_line_start"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/parent_guide_line_end"
+        android:id="@+id/register_parent_guide_line_end"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/parent_guide_line_top"
+        android:id="@+id/register_parent_guide_line_top"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.15" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/parent_guide_line_bottom"
+        android:id="@+id/register_parent_guide_line_bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.85" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/child_constraint"
+        android:id="@+id/register_child_constraint"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/parent_guide_line_bottom"
-        app:layout_constraintEnd_toStartOf="@id/parent_guide_line_end"
-        app:layout_constraintStart_toEndOf="@id/parent_guide_line_start"
-        app:layout_constraintTop_toBottomOf="@id/parent_guide_line_top">
+        app:layout_constraintBottom_toTopOf="@id/register_parent_guide_line_bottom"
+        app:layout_constraintEnd_toStartOf="@id/register_parent_guide_line_end"
+        app:layout_constraintStart_toEndOf="@id/register_parent_guide_line_start"
+        app:layout_constraintTop_toBottomOf="@id/register_parent_guide_line_top">
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_line_1"
+            android:id="@+id/register_guide_line_1"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_line_2"
+            android:id="@+id/register_guide_line_2"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9" />
 
         <TextView
-            android:id="@+id/sign_in_txt"
+            android:id="@+id/register_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
+            android:text="@string/register"
             android:textColor="@color/black"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@id/text_input_layout_user_name"
-            app:layout_constraintStart_toEndOf="@id/guide_line_1"
+            app:layout_constraintBottom_toTopOf="@id/register_layout_user_name"
+            app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout_user_name"
+            android:id="@+id/register_layout_user_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/user_name"
             app:errorEnabled="true"
-            app:layout_constraintBottom_toTopOf="@id/text_input_layout_password"
-            app:layout_constraintEnd_toStartOf="@id/guide_line_2"
-            app:layout_constraintStart_toEndOf="@id/guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/sign_in_txt">
+            app:layout_constraintBottom_toTopOf="@id/text_input_layout_email"
+            app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
+            app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
+            app:layout_constraintTop_toBottomOf="@id/register_txt">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/text_input_edit_text_user_name"
+                android:id="@+id/register_edit_text_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -91,74 +91,94 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout_password"
+            android:id="@+id/text_input_layout_email"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/email"
+            app:errorEnabled="true"
+            app:layout_constraintBottom_toTopOf="@id/register_layout_password"
+            app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
+            app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
+            app:layout_constraintTop_toBottomOf="@id/register_layout_user_name">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_input_edit_text_user_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/register_layout_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
             app:errorEnabled="true"
-            app:layout_constraintBottom_toTopOf="@id/sign_in_btn"
-            app:layout_constraintEnd_toStartOf="@id/guide_line_2"
-            app:layout_constraintStart_toEndOf="@id/guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_user_name">
+            app:layout_constraintBottom_toTopOf="@id/register_btn"
+            app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
+            app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/text_input_edit_text_password"
+                android:id="@+id/register_edit_text_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/forgot_password_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/forgot_password"
-            android:textColor="@color/green_700"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toStartOf="@id/guide_line_2"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />
-
         <Button
-            android:id="@+id/sign_in_btn"
+            android:id="@+id/register_btn"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="@string/sign_in"
+            android:text="@string/register"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guide_line_2"
-            app:layout_constraintStart_toEndOf="@id/guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/forgot_password_txt" />
+            app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
+            app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
+            app:layout_constraintTop_toBottomOf="@id/register_layout_password" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/no_account_txt"
+        android:id="@+id/have_account_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="@string/no_account"
+        android:text="@string/have_account"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/sign_up_txt"
+        app:layout_constraintEnd_toStartOf="@id/register_log_in_txt"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@id/parent_guide_line_start"
-        app:layout_constraintTop_toBottomOf="@id/child_constraint"
+        app:layout_constraintStart_toEndOf="@id/register_parent_guide_line_start"
+        app:layout_constraintTop_toBottomOf="@id/register_child_constraint"
         app:layout_constraintVertical_bias="0.4" />
 
     <TextView
-        android:id="@+id/sign_up_txt"
+        android:id="@+id/register_log_in_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up"
+        android:text="@string/log_in_underlined"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@id/no_account_txt"
-        app:layout_constraintEnd_toStartOf="@id/parent_guide_line_end"
-        app:layout_constraintStart_toEndOf="@id/no_account_txt" />
+        app:layout_constraintBaseline_toBaselineOf="@id/have_account_txt"
+        app:layout_constraintEnd_toStartOf="@id/register_parent_guide_line_end"
+        app:layout_constraintStart_toEndOf="@id/have_account_txt" />
+
+    <ProgressBar
+        android:id="@+id/register_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
