--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -60,30 +60,30 @@
             app:layout_constraintGuide_percent="0.9" />
 
         <TextView
-            android:id="@+id/log_in_txt"
+            android:id="@+id/login_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/log_in"
+            android:text="@string/login_uppercase"
             android:textColor="@color/black"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@id/login_layout_user_name"
+            app:layout_constraintBottom_toTopOf="@id/login_layout_email"
             app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_layout_user_name"
+            android:id="@+id/login_layout_email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/user_name"
+            android:hint="@string/email"
             app:errorEnabled="true"
             app:layout_constraintBottom_toTopOf="@id/login_layout_password"
             app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/log_in_txt">
+            app:layout_constraintTop_toBottomOf="@id/login_txt">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_edit_text_user_name"
+                android:id="@+id/login_edit_text_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -98,10 +98,10 @@
             android:hint="@string/password"
             app:endIconMode="password_toggle"
             app:errorEnabled="true"
-            app:layout_constraintBottom_toTopOf="@id/sign_in_btn"
+            app:layout_constraintBottom_toTopOf="@id/login_btn"
             app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/login_layout_user_name">
+            app:layout_constraintTop_toBottomOf="@id/login_layout_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_edit_text_password"
@@ -122,15 +122,25 @@
             app:layout_constraintTop_toBottomOf="@id/login_layout_password" />
 
         <Button
-            android:id="@+id/sign_in_btn"
+            android:id="@+id/login_btn"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="@string/log_in"
+            android:text="@string/login_uppercase"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
             app:layout_constraintTop_toBottomOf="@id/forgot_password_txt" />
+
+        <ProgressBar
+            android:id="@+id/login_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -153,23 +163,12 @@
         android:id="@+id/sign_up_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up"
+        android:text="@string/sign_up_underlined"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@id/no_account_txt"
         app:layout_constraintEnd_toStartOf="@id/login_parent_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/no_account_txt" />
-
-    <ProgressBar
-        android:id="@+id/login_progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
