--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -63,7 +63,7 @@
             android:id="@+id/register_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register"
+            android:text="@string/register_uppercase"
             android:textColor="@color/black"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@id/register_layout_user_name"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/user_name"
             app:errorEnabled="true"
-            app:layout_constraintBottom_toTopOf="@id/text_input_layout_email"
+            app:layout_constraintBottom_toTopOf="@id/register_layout_email"
             app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
             app:layout_constraintTop_toBottomOf="@id/register_txt">
@@ -91,7 +91,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout_email"
+            android:id="@+id/register_layout_email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -103,7 +103,7 @@
             app:layout_constraintTop_toBottomOf="@id/register_layout_user_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/text_input_edit_text_user_email"
+                android:id="@+id/register_edit_text_user_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -121,7 +121,7 @@
             app:layout_constraintBottom_toTopOf="@id/register_btn"
             app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
+            app:layout_constraintTop_toBottomOf="@id/register_layout_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_edit_text_password"
@@ -135,12 +135,23 @@
             android:id="@+id/register_btn"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="@string/register"
+            android:text="@string/register_uppercase"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/register_guide_line_2"
             app:layout_constraintStart_toEndOf="@id/register_guide_line_1"
             app:layout_constraintTop_toBottomOf="@id/register_layout_password" />
+
+
+        <ProgressBar
+            android:id="@+id/register_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -163,22 +174,12 @@
         android:id="@+id/register_log_in_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/log_in_underlined"
+        android:text="@string/login_underlined"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@id/have_account_txt"
         app:layout_constraintEnd_toStartOf="@id/register_parent_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/have_account_txt" />
-
-    <ProgressBar
-        android:id="@+id/register_progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
