--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -24,11 +24,11 @@
         android:id="@+id/space_top"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/welcome_title"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
-        app:layout_constraintVertical_weight="40"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="40" />
 
     <TextView
         android:id="@+id/welcome_title"
@@ -60,10 +60,10 @@
         android:id="@+id/welcome_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/welcome_description"
         android:textColor="@color/black"
         android:textSize="14sp"
-        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@id/space_middle1"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
@@ -73,17 +73,17 @@
         android:id="@+id/space_middle1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/welcome_description"
         app:layout_constraintBottom_toTopOf="@id/welcome_register_btn"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
-        app:layout_constraintVertical_weight="20"/>
+        app:layout_constraintTop_toBottomOf="@id/welcome_description"
+        app:layout_constraintVertical_weight="20" />
 
     <Button
         android:id="@+id/welcome_register_btn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:text="@string/register"
+        android:text="@string/register_uppercase"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@id/space_middle2"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
@@ -94,17 +94,17 @@
         android:id="@+id/space_middle2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/welcome_register_btn"
         app:layout_constraintBottom_toTopOf="@id/welcome_login_txt"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
-        app:layout_constraintVertical_weight="10"/>
+        app:layout_constraintTop_toBottomOf="@id/welcome_register_btn"
+        app:layout_constraintVertical_weight="10" />
 
     <TextView
         android:id="@+id/welcome_login_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/log_in"
+        android:text="@string/login_uppercase"
         android:textColor="@color/green_500"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@id/space_bottom"
@@ -116,10 +116,10 @@
         android:id="@+id/space_bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/welcome_login_txt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
-        app:layout_constraintVertical_weight="40"/>
+        app:layout_constraintTop_toBottomOf="@id/welcome_login_txt"
+        app:layout_constraintVertical_weight="40" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
