--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -42,5 +42,15 @@
             app:destination="@id/registrationFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/nav_from_loginFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="ua.com.foxminded.locationtrackera.ui.tracker.TrackerFragment"
+        android:label="maps_fragment"
+        tools:layout="@layout/tracker_fragment" />
 </navigation>
