--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -43,14 +43,24 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
-            android:id="@+id/nav_from_loginFragment_to_mapsFragment"
-            app:destination="@id/mapsFragment"
+            android:id="@+id/nav_from_loginFragment_to_trackerFragment"
+            app:destination="@id/trackerFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/nav_from_loginFragment_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
-        android:id="@+id/mapsFragment"
-        android:name="ua.com.foxminded.locationtrackera.ui.tracker.TrackerFragment"
-        android:label="maps_fragment"
+        android:id="@+id/trackerFragment"
+        android:name="ua.com.foxminded.locationtrackera.ui.TrackerFragment"
+        android:label="tracker_fragment"
         tools:layout="@layout/tracker_fragment" />
+    <fragment
+        android:id="@+id/resetPasswordFragment"
+        android:name="ua.com.foxminded.locationtrackera.ui.login.ResetPasswordFragment"
+        android:label="reset_password_fragment"
+        tools:layout="@layout/reset_password_fragment" />
 </navigation>
