--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -105,7 +105,7 @@
             android:id="@+id/reset_password_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:alpha="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
