--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green_500"
-    tools:context=".ui.login.ResetPasswordFragment">
+    tools:context=".ui.reset.ResetPasswordFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/reset_password_parent_guide_line_start"
