--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="green_700">#388E3C</color>
     <color name="yellow_200">#FFF59D</color>
     <color name="yellow_700">#FBC02D</color>
+    <color name="red_500">#F44336</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
