--- a/app/src/main/res/navigation/tracker_navigation_graph.xml
+++ b/app/src/main/res/navigation/tracker_navigation_graph.xml
@@ -32,6 +32,11 @@
             app:destination="@id/loginFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/nav_from_registrationFragment_to_trackerFragment"
+            app:destination="@id/trackerFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
     <fragment
