--- a/app/src/main/res/navigation/maps_navigation_graph.xml
+++ b/app/src/main/res/navigation/maps_navigation_graph.xml
@@ -48,6 +48,11 @@
             app:destination="@id/mapsLoginFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/nav_from_mapsRegistrationFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
