--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
-        android:text="@string/app_name_short"
+        android:text="@string/app_name"
         android:textColor="@color/green_500"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:contentDescription="@string/welcome_message"
-        android:src="@drawable/icon"
+        android:src="@drawable/icon_a"
         app:layout_constraintBottom_toTopOf="@id/welcome_description"
         app:layout_constraintEnd_toStartOf="@id/welcome_guide_line_end"
         app:layout_constraintStart_toEndOf="@id/welcome_guide_line_start"
